--- a/electron/index.html
+++ b/electron/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Hello World!</title>
+<script>
+var remote = require('remote');
+var BrowserWindow = remote.require('browser-window');
+var win = new BrowserWindow({ width: 800, height: 600 });
+win.loadUrl('https://www.baidu.com');
+</script>
   </head>
   <body>
     <h1>Hello World!</h1>
