--- a/electron/remote.html
+++ b/electron/remote.html
@@ -4,16 +4,20 @@
 	<meta charset="UTF-8">
 	<title>Remote</title>
 	<script type="text/javascript">
-	(function inTorModule() {
+	function reload() {
 		var remote = require('remote');
-		var BrowserWindow = remote.require('browser-window');
-		var win = new BrowserWindow({ width: 800, height: 600 });
-		win.loadUrl('http://electron.atom.io');
-	})();
+		remote.getCurrentWindow().reload();
+	}
+	window.onload = function(){
+		document.getElementById('reload').addEventListener('click', function(){
+			reload();
+		});
+	}
 	</script>
 </head>
 <body>
 	<h1>Remote</h1>
 	<a href="index.html" class="backHome">返回主页</a>
+	<a href="javascript:;" id="reload">刷新</a>
 </body>
 </html>
