remote获取当前窗口内容对象并获取页面标题

--- a/electron/remote.html
+++ b/electron/remote.html
@@ -4,14 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Remote</title>
 	<script type="text/javascript">
+	var remote = require('remote');
 	function reload() {
-		var remote = require('remote');
 		remote.getCurrentWindow().reload();
 	}
 	window.onload = function(){
 		document.getElementById('reload').addEventListener('click', function(){
 			reload();
 		});
+		var cotnent = remote.getCurrentWebContents();
+		console.log(cotnent.getTitle());
 	}
 	</script>
 </head>
