播放器控制程序

--- a/kuwo/client/index.html
+++ b/kuwo/client/index.html
@@ -8,6 +8,7 @@
 	<script src="index.js"></script>
 </head>
 <body ng-controller="LoaderController">
+	<a href="player.html">player list</a>
 	<div style="display:none">
 		<div class="loader-pic" ng-class="{loading: loader, loaded: !loader}">
 			<img src="images/top.jpg">
