--- a/kuwo/client/layout.html
+++ b/kuwo/client/layout.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>酷我音乐</title>
-	<script src="angular.js"></script>
-	<script src="angular-route.js"></script>
-	<script src="ngDialog.js"></script>
+	<script src="js/lib/angular.js"></script>
+	<script src="js/lib/angular-route.js"></script>
+	<script src="js/lib/ngDialog.js"></script>
     <link rel="stylesheet" href="css/dialog/ngDialog.css">
     <link rel="stylesheet" href="css/dialog/ngDialog-theme-default.css">
     <link rel="stylesheet" href="css/dialog/ngDialog-theme-plain.css">
@@ -52,7 +52,7 @@
 	</div>
 	<div class="main-list">
 		<div class="list-header">
-			<a href="#"><i class="fa fa-plus"></i>添加</a>
+			<a href="#" ng-click="addLocalMusic()"><i class="fa fa-plus"></i>添加</a>
 			<a href="#"><i class="fa fa-trash"></i>整理</a>
 			<a href="#"><i class="fa fa-search"></i>查找</a>
 			<a href="#"><i class="fa fa-cloud-upload"></i>同步</a>
@@ -62,11 +62,13 @@
 				<dt><a href="#">创建列表</a></dt>
 				<dd ng-click="sayhi(key)" ng-repeat="(key, value) in songList"><a href="#">{{value.title}}</a></dd>
 			</dl>
-			<ul class="list-songs">
-				<li data-ng-repeat="(index, val) in voices" ng-class="{on: currentPlayMusicIndex == index}">
-					<a href="javascript:;" ng-click="startPlay(index)" ng-bind="val.name"></a>
-				</li>
-			</ul>
+			<div class="list-song-js-box">
+				<ul class="list-songs">
+					<li data-ng-repeat="(index, val) in voices" ng-class="{on: currentPlayMusicIndex == index}">
+						<a href="javascript:;" ng-click="startPlay(index)" ng-bind="val.name"></a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="main-footer">
@@ -92,7 +94,7 @@
 			<a href="javascript:;" class="volume fa fa-volume-down"></a>
 		</div>
 		<div class="tools-bottom">
-			<a href="javascript:;">循环</a>
+			<a href="javascript:;" ng-click="changeLoop()">循环</a>
 			<a href="javascript:;">桌面歌词</a>
 			<a href="javascript:;">工具</a>
 		</div>
