--- a/kuwo/client/layout.html
+++ b/kuwo/client/layout.html
@@ -51,7 +51,7 @@
 	</div>
 	<div class="main-list" ng-controller="ListController">
 		<div class="list-header">
-			<a href="#" ng-click="addLocalMusic()"><i class="fa fa-plus"></i>添加</a>
+			<a href="#" ng-click="vm.addLocalMusic()"><i class="fa fa-plus"></i>添加</a>
 			<a href="#"><i class="fa fa-trash"></i>整理</a>
 			<a href="#"><i class="fa fa-search"></i>查找</a>
 			<a href="#"><i class="fa fa-cloud-upload"></i>同步</a>
@@ -86,10 +86,10 @@
 			<a href="#" class="share"></a>
 		</div>
 		<div class="music-controller">
-			<a href="javascript:;" ng-click="prev()" class="backward fa fa-step-backward"></a>
+			<a href="javascript:;" ng-click="vm.prev()" class="backward fa fa-step-backward"></a>
 			<a href="javascript:;" ng-click="play()" ng-show="paused" class="play fa fa-play"></a>
 			<a href="javascript:;" ng-click="vm.pause()" ng-show="!paused" class="pause fa fa-pause"></a>
-			<a href="javascript:;" ng-click="next()" class="forward fa fa-step-forward"></a>
+			<a href="javascript:;" ng-click="vm.next()" class="forward fa fa-step-forward"></a>
 			<a href="javascript:;" class="volume fa fa-volume-down"></a>
 		</div>
 		<div class="tools-bottom">
